--- a/Web Aplication Trainee VIxTeam/Views/Shared/_Layout.cshtml
+++ b/Web Aplication Trainee VIxTeam/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false"><font color="#000000">Cadastro</font></a>
                             <ul class="dropdown-menu" aria-labelledby="dropdown03">
-                            <li><a class="dropdown-item" href="#">Empresa</a></li>
+                            <li><a class="dropdown-item"  asp-area="" asp-controller="Empresa" asp-action="Index">Empresa</a></li>
                             <li><a class="dropdown-item" href="#">Pessoa</a></li>
                             </ul>
                         </li>
