--- a/Web Aplication Trainee VIxTeam/Views/Shared/_Layout.cshtml
+++ b/Web Aplication Trainee VIxTeam/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false"><font color="#000000">Cadastro</font></a>
                             <ul class="dropdown-menu" aria-labelledby="dropdown03">
                             <li><a class="dropdown-item"  asp-area="" asp-controller="Empresa" asp-action="Index">Empresa</a></li>
-                            <li><a class="dropdown-item" href="#">Pessoa</a></li>
+                            <li><a class="dropdown-item" asp-area="" asp-controller="PessoaModels" asp-action="Index">Pessoa</a></li>
                             </ul>
                         </li>
                     </ul>
