--- a/Web Aplication Trainee VIxTeam/Views/PessoaModels/Create.cshtml
+++ b/Web Aplication Trainee VIxTeam/Views/PessoaModels/Create.cshtml
@@ -1,10 +1,8 @@
 ﻿@model Web_Aplication_Trainee_VIxTeam.Models.PessoaModel
 
-@{
-    ViewData["Title"] = "Create";
-}
-
 <h1>Create</h1>
+
+@Html.ValidationSummary()
 
 <h4>PessoaModel</h4>
 <hr />
@@ -24,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DataNascimento" class="control-label"></label>
-                <input asp-for="DataNascimento" class="form-control" />
+                <input type="date" asp-for="DataNascimento" class="form-control" />
                 <span asp-validation-for="DataNascimento" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -38,7 +36,7 @@
                 <span asp-validation-for="Salario" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" style="margin-top:10px"/>
             </div>
         </form>
     </div>
