--- a/Web Aplication Trainee VIxTeam/Views/PessoaModels/Edit.cshtml
+++ b/Web Aplication Trainee VIxTeam/Views/PessoaModels/Edit.cshtml
@@ -6,6 +6,8 @@
 
 <h1>Edit</h1>
 
+@Html.ValidationSummary()
+
 <h4>PessoaModel</h4>
 <hr />
 <div class="row">
@@ -25,7 +27,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DataNascimento" class="control-label"></label>
-                <input asp-for="DataNascimento" class="form-control" />
+                <input type="date" asp-for="DataNascimento" class="form-control" />
                 <span asp-validation-for="DataNascimento" class="text-danger"></span>
             </div>
             <div class="form-group">
