--- a/Web Aplication Trainee VIxTeam/Views/Home/Index.cshtml
+++ b/Web Aplication Trainee VIxTeam/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Bem Vindo</h1>
     <div class="col-md-6" style="margin:auto">
         <div class="h-100 p-5 bg-light border rounded-3">
           <h2>Aplicação Web</h2>
